# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "isaacsim-asset-importer-urdf"
version = "1.0.0"
description = "URDF importer for converting robot descriptions to USD"
requires-python = ">=3.12"
dependencies = [
    "isaacsim-asset-importer-utils==1.0.0",
    "isaacsim-asset-transformer==1.0.0",
    "isaacsim-asset-transformer-rules==1.0.0",
    "urdf-usd-converter==0.1.2",
    "usd-exchange>=2.2.2",
]
readme = "docs/Overview.md"
license = "Apache-2.0"
keywords = ["nvidia", "isaac", "sim", "usd", "urdf", "importer", "robot"]
authors = [
    {name = "NVIDIA Corporation"},
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.standalone-wheel]
symlinks = [
    {link = "isaacsim/asset/importer/urdf/__init__.py", target = "python/__init__.py"},
    {link = "isaacsim/asset/importer/urdf/impl", target = "python/impl"},
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "isaacsim.asset.importer.urdf",
    "isaacsim.asset.importer.urdf.*",
]
exclude = ["isaacsim.asset.importer.urdf.tests"]
