# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "isaacsim-asset-transformer-rules"
version = "1.0.0"
description = "Rule implementations for the Isaac Sim Asset Transformer"
requires-python = ">=3.12"
dependencies = [
    "isaacsim-asset-transformer==1.0.0",
    "isaacsim-robot-schema==1.0.0",
    "usd-exchange>=2.2.2",
]
readme = "docs/Overview.md"
license = "Apache-2.0"
keywords = ["nvidia", "isaac", "sim", "usd", "asset", "transformer", "rules"]
authors = [
    {name = "NVIDIA Corporation"},
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "isaacsim.asset.transformer.rules",
    "isaacsim.asset.transformer.rules.*",
]
exclude = ["isaacsim.asset.transformer.rules.tests"]

[tool.standalone-wheel]
symlinks = [
    {link = "isaacsim/asset/transformer/rules/data", target = "data"},
]

[tool.setuptools.package-data]
"isaacsim.asset.transformer.rules" = ["data/*.json"]
