# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "isaacsim-asset-transformer"
version = "1.0.0"
description = "USD asset transformation framework from NVIDIA Isaac Sim"
requires-python = ">=3.12"
dependencies = [
    "usd-exchange>=2.2.2",
]
readme = "docs/Overview.md"
license = "Apache-2.0"
keywords = ["nvidia", "isaac", "sim", "usd", "asset", "transformer"]
authors = [
    {name = "NVIDIA Corporation"},
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["isaacsim.asset.transformer"]
exclude = ["isaacsim.asset.transformer.tests"]
