# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "isaacsim-robot-schema"
version = "1.0.0"
description = "Isaac Sim USD robot schema helpers and applied schema utilities"
requires-python = ">=3.12"
dependencies = [
    "usd-exchange>=2.2.2",
]
readme = "docs/Overview.md"
license = "Apache-2.0"
keywords = ["nvidia", "isaac", "sim", "usd", "robot", "schema"]
authors = [
    {name = "NVIDIA Corporation"},
]

[project.optional-dependencies]
ik = ["numpy>=1.24"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.standalone-wheel]
symlinks = [
    {link = "usd/schema/isaac/__init__.py", target = "python/__init__.py"},
    {link = "usd/schema/isaac/robot_schema", target = "robot_schema"},
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "usd.schema.isaac",
    "usd.schema.isaac.robot_schema",
]

[tool.setuptools.package-data]
"usd.schema.isaac.robot_schema" = ["*.usda", "plugInfo.json"]
