[metadata]
name = scene-blox
version = 0.0.4
author = Emilie Wirbel
author_email = ewirbel@nvidia.com
description = A package to buid scenes for Omniverse
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    PyYAML

[options.packages.find]
where = src